--- a/portal/portal-pirates/package.json
+++ b/portal/portal-pirates/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.8",
     "@mui/icons-material": "^7.3.5",
+    "@mui/lab": "^7.0.1-beta.19",
     "@mui/material": "^7.3.5",
+    "@types/luxon": "^3.7.1",
+    "luxon": "^3.7.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
