--- a/portal/portal-pirates-backend/package.json
+++ b/portal/portal-pirates-backend/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
+    "@google/genai": "^1.29.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
