--- a/portal/portal-pirates-backend/tsconfig.json
+++ b/portal/portal-pirates-backend/tsconfig.json
@@ -5,6 +5,8 @@
     "allowJs": false,
     "noEmitOnError": true,
     "esModuleInterop": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
