--- a/portal/portal-pirates/package.json
+++ b/portal/portal-pirates/package.json
@@ -17,9 +17,13 @@
     "@mui/lab": "^7.0.1-beta.19",
     "@mui/material": "^7.3.5",
     "@types/luxon": "^3.7.1",
+    "@types/react-slick": "^0.23.13",
+    "framer-motion": "^12.23.24",
     "luxon": "^3.7.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
