--- a/portal/portal-pirates/package.json
+++ b/portal/portal-pirates/package.json
@@ -23,6 +23,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-slick": "^0.31.0",
+    "react-use": "^17.6.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
