--- a/portal/portal-pirates-backend/.env
+++ b/portal/portal-pirates-backend/.env
@@ -1,3 +1,4 @@
 PORT=3001
 GOOGLE_CLOUD_PROJECT=reboot-edinburgh-team7
 GOOGLE_CLOUD_LOCATION=us-central1
+GOOGLE_APPLICATION_CREDENTIALS="/Users/arjanrandhawa/Git/portal-pirates/portal/portal-pirates-backend/vertex-ai-service-account.json"
